--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,13 @@
         <item name="colorPrimary">@color/green_500</item>
         <item name="colorPrimaryVariant">@color/green_700</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="textColor">@color/black</item>
+        <item name="metaTextColor">@color/black_700</item>
+        <item name="backgroundColor">@color/white</item>
+        <item name="background">@drawable/custom_list_background</item>
+        <item name="content_background">@color/blue_200</item>
+        <item name="tab_color">@drawable/tab_color</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/blue_200</item>
         <item name="colorSecondaryVariant">@color/blue_700</item>
