--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="QuestionCategoryView">
-        <attr name="category_image" format="reference"/>
-        <attr name="category_text" format="string"/>
+    <declare-styleable name="QuestionView">
+        <attr name="question_text" format="string"/>
+        <attr name="question_code" format="string"/>
     </declare-styleable>
-    <declare-styleable name="ChannelContentView">
-        <attr name="content_message" format="string"/>
-    </declare-styleable>
+    
     <attr name="background" format="reference"/>
     <attr name="content_background" format="reference"/>
     <attr name="bgColor" format="color"/>
