--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--White Theme Color-->
+    <color name="green_100">#AAE87E</color>
     <color name="green_200">#80ee31</color>
     <color name="green_500">#57cc02</color>
     <color name="green_700">#55be08</color>
     <color name="blue_200">#ddf3fe</color>
     <color name="blue_700">#1cb0f6</color>
+
+    <!-- Colors for Button Style -->
+    <color name="gradient_start_color">#4C84FF</color>
+    <color name="gradient_end_color">#18a3fe</color>
+
     <!-- Night Theme Color-->
     <color name="black_200">#151e27</color>
     <color name="black_500">#212d3b</color>
