--- a/app/src/main/res/layout/view_question.xml
+++ b/app/src/main/res/layout/view_question.xml
@@ -33,6 +33,7 @@
         android:textSize="12sp"
         android:background="@color/blue_200"
         android:layout_marginTop="5dp"
+        android:paddingLeft="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_question_text" />
