--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -117,6 +117,15 @@
                 app:answer_text="@string/title"
                 app:answer_code="@string/description"
                 />
+            <net.golbarg.skillassessment.CustomView.AnswerView
+                android:id="@+id/answer_view_4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:layout_marginTop="10dp"
+                app:answer_text="@string/title"
+                app:answer_code="@string/description"
+                />
         </LinearLayout>
     </ScrollView>
     <LinearLayout
