--- a/app/src/main/res/layout/view_answer.xml
+++ b/app/src/main/res/layout/view_answer.xml
@@ -5,7 +5,10 @@
     android:background="@drawable/custom_list_background"
     android:clickable="true"
     android:focusable="true"
-    android:padding="4dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
