--- a/app/src/main/res/layout/view_question.xml
+++ b/app/src/main/res/layout/view_question.xml
@@ -7,7 +7,10 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:padding="4dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     >
 
     <TextView
