--- a/app/src/main/res/layout/dialog_credit.xml
+++ b/app/src/main/res/layout/dialog_credit.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="20dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/txt_credit_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/total_credits"
+        android:text="@string/credits"
         android:textColor="?attr/textColor"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/img_credit"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/txt_credit_title"
-        app:layout_constraintTop_toBottomOf="@+id/txt_credit_title"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_credit_title"
+        app:layout_constraintStart_toEndOf="@+id/txt_credit_title"
+        app:layout_constraintTop_toTopOf="@+id/txt_credit_title"
         app:srcCompat="@drawable/ic_coin" />
 
     <TextView
@@ -30,26 +32,26 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="10"
-        android:textSize="26sp"
+        android:layout_marginStart="5dp"
         android:textAlignment="center"
-        android:textStyle="bold"
         android:textColor="?attr/textColor"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/img_credit"
-        app:layout_constraintEnd_toStartOf="@+id/img_credit"
-        app:layout_constraintStart_toStartOf="@+id/txt_credit_title"
+        app:layout_constraintStart_toEndOf="@+id/img_credit"
         app:layout_constraintTop_toTopOf="@+id/img_credit" />
 
     <Button
         android:id="@+id/btn_view_ad"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/view_ad"
         android:drawableEnd="@drawable/ic_video"
-        android:textColor="@color/white"
         android:drawableTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/view_ad"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/txt_credit"
+        app:layout_constraintStart_toStartOf="@+id/txt_credit_title"
         app:layout_constraintTop_toBottomOf="@+id/img_credit" />
 
 
