--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,5 +21,5 @@
         android:id="@+id/navigation_profile"
         android:name="net.golbarg.skillassessment.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragement_profile" />
+        tools:layout="@layout/fragment_profile" />
 </navigation>
