--- a/app/src/main/res/layout/view_question.xml
+++ b/app/src/main/res/layout/view_question.xml
@@ -44,13 +44,14 @@
 
     <ImageView
         android:id="@+id/img_question_image"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:flow_horizontalAlign="start"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_question_code"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/image_placeholder" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
