--- a/app/src/main/res/layout/custom_list_category.xml
+++ b/app/src/main/res/layout/custom_list_category.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:background="?attr/category_background"
+    android:background="@drawable/custom_list_category_background"
     android:clickable="true"
     android:focusable="true"
     >
