--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="green_500">#57cc02</color>
     <color name="green_700">#55be08</color>
     <color name="blue_200">#ddf3fe</color>
+    <color name="blue_500">#C0E9FD</color>
     <color name="blue_700">#1cb0f6</color>
 
     <!-- Colors for Button Style -->
