--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -75,6 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <LinearLayout
+            android:id="@+id/linear_layout_question_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -96,6 +97,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
+                android:layout_marginTop="5dp"
                 app:answer_text="@string/title"
                 app:answer_code="@string/description"
                 />
@@ -104,7 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 app:answer_text="@string/title"
                 app:answer_code="@string/description"
                 />
@@ -113,7 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 app:answer_text="@string/title"
                 app:answer_code="@string/description"
                 />
@@ -122,7 +124,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
+                app:answer_text="@string/title"
+                app:answer_code="@string/description"
+                />
+
+            <net.golbarg.skillassessment.CustomView.AnswerView
+                android:id="@+id/answer_view_5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:layout_marginTop="5dp"
                 app:answer_text="@string/title"
                 app:answer_code="@string/description"
                 />
@@ -133,36 +145,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginStart="2dp"
-        android:layout_marginEnd="2dp"
+        android:padding="2dp"
         android:weightSum="5"
+        android:background="@color/blue_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="4">
+            <TextView
+                android:id="@+id/txt_question_track"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:paddingLeft="10dp"
+                android:layout_weight="2"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:text="0/0" />
             <TextView
                 android:id="@+id/txt_timer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
+                android:layout_gravity="center"
                 android:paddingLeft="10dp"
                 android:textSize="16sp"
+                android:layout_weight="2"
                 android:textStyle="bold"
                 android:text="00:00" />
         </LinearLayout>
 
         <Button
             android:id="@+id/btn_next_question"
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Next Question"/>
-
+            android:drawableEnd="@drawable/ic_forward"
+            android:drawableTint="@color/white"
+            android:text="Next"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
