--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -23,7 +23,7 @@
             android:id="@+id/img_close"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            app:tint="@color/black"
+            app:tint="?attr/textColor"
             android:layout_gravity="center_vertical"
             app:srcCompat="@drawable/ic_close" />
 
@@ -42,7 +42,7 @@
             android:progress="5" />
 
         <LinearLayout
-            android:layout_width="40dp"
+            android:layout_width="45dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
@@ -60,7 +60,10 @@
                 android:layout_height="25dp"
                 android:gravity="center_vertical"
                 android:text="5"
-                android:textColor="@color/black"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:textSize="16sp"
+                android:textColor="?attr/textColor"
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
@@ -147,7 +150,7 @@
         android:orientation="horizontal"
         android:padding="2dp"
         android:weightSum="5"
-        android:background="@color/blue_200"
+        android:background="?attr/category_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -161,7 +164,7 @@
                 android:id="@+id/txt_question_track"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:textColor="?attr/textColor"
                 android:layout_gravity="center"
                 android:paddingLeft="10dp"
                 android:layout_weight="2"
@@ -172,7 +175,7 @@
                 android:id="@+id/txt_timer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:textColor="?attr/textColor"
                 android:layout_gravity="center"
                 android:paddingLeft="10dp"
                 android:textSize="16sp"
@@ -186,6 +189,8 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/white"
+            android:layout_marginEnd="5dp"
             android:drawableEnd="@drawable/ic_forward"
             android:drawableTint="@color/white"
             android:text="Next"/>
