--- a/app/src/main/res/layout/view_answer.xml
+++ b/app/src/main/res/layout/view_answer.xml
@@ -18,7 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/title"
-        android:textColor="@color/black"
+        android:textColor="?attr/textColor"
         android:fontFamily="monospace"
         android:textSize="15sp"
         android:textStyle="bold"
