--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,23 +3,35 @@
     <style name="Theme.SkillAssessment" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_200</item>
-        <item name="colorPrimaryVariant">@color/green_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/green_500</item>
+        <item name="colorOnPrimary">@color/green_700</item>
 
         <item name="textColor">@color/white</item>
         <item name="metaTextColor">@color/gray</item>
-        <item name="backgroundColor">@color/black_500</item>
-        <item name="background">@drawable/custom_list_background_night</item>
-        <item name="category_background">@color/black_500</item>
+        <item name="backgroundColor">@color/blue_600</item>
         <item name="content_background">@color/blue_200</item>
+        <item name="category_background">@color/blue_600</item>
         <item name="tab_color">@drawable/tab_color</item>
 
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/blue_200</item>
-        <item name="colorSecondaryVariant">@color/blue_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/green_200</item>
+        <item name="colorSecondaryVariant">@color/green_500</item>
+        <item name="colorOnSecondary">@color/green_700</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="actionBarStyle">@style/Theme.Night.Action</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="Theme.Night.Action" parent="@style/Widget.AppCompat.Light.ActionBar">
+        <item name="background">@color/green_700</item>
+        <item name="titleTextStyle">@style/ActionBarTitleText</item>
+        <item name="subtitleTextStyle">@style/ActionBarSubTitleText</item>
+    </style>
+    <style name="ActionBarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ActionBarSubTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle">
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
