--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,9 @@
     <color name="green_500">#57cc02</color>
     <color name="green_700">#55be08</color>
     <color name="blue_200">#ddf3fe</color>
-    <color name="blue_500">#C0E9FD</color>
-    <color name="blue_700">#1cb0f6</color>
+    <color name="blue_500">#1cb0f6</color>
+    <color name="blue_600">#4071AA</color>
+    <color name="blue_700">#3e6189</color>
 
     <!-- Colors for Button Style -->
     <color name="gradient_start_color">#4C84FF</color>
@@ -17,7 +18,6 @@
     <color name="black_200">#151e27</color>
     <color name="black_500">#212d3b</color>
     <color name="black_700">#1a242e</color>
-    <color name="blue_600">#3e6189</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#C1C1C1</color>
