--- a/app/src/main/res/layout/custom_list_bookmark_question.xml
+++ b/app/src/main/res/layout/custom_list_bookmark_question.xml
@@ -3,25 +3,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="?attr/content_background"
+    android:background="?attr/category_background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/txt_message"
-        android:paddingRight="10dp"
-        android:paddingLeft="10dp"
+    <net.golbarg.skillassessment.CustomView.QuestionView
+        android:id="@+id/question_view"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:question_text="@string/title"
+        app:question_code="@string/description"
+        android:textIsSelectable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <net.golbarg.skillassessment.CustomView.AnswerView
+        android:id="@+id/question_answer_view"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp"
         android:paddingBottom="10dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/title"
+        app:answer_text="@string/title"
+        app:answer_code="@string/description"
         android:textIsSelectable="true"
-        android:textSize="15sp"
-        android:textColor="?attr/textColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/question_view" />
 
     <Button
         android:id="@+id/btn_delete"
@@ -31,10 +44,10 @@
         android:layout_marginLeft="5dp"
         android:text="@string/delete"
         android:textColor="@color/white"
-        android:drawableEnd="@drawable/ic_bookmark"
+        android:drawableEnd="@drawable/ic_delete"
         android:drawableTint="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/btn_share"
-        app:layout_constraintTop_toBottomOf="@+id/txt_message" />
+        app:layout_constraintTop_toBottomOf="@+id/question_answer_view" />
 
     <Button
         android:id="@+id/btn_share"
@@ -47,6 +60,6 @@
         android:drawableEnd="@drawable/ic_share"
         android:drawableTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_message" />
+        app:layout_constraintTop_toBottomOf="@+id/question_answer_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
