--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/layout_main_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,11 +11,12 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:weightSum="1"
+        android:background="?attr/category_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -164,6 +166,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
+            android:id="@+id/layout_footer"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -197,11 +200,12 @@
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="14sp"
+            android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_marginEnd="5dp"
-            android:drawableEnd="@drawable/ic_forward"
             android:drawableTint="@color/white"
-            android:text="Next"/>
+            android:text="@string/next"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
