--- a/app/src/main/res/drawable/custom_list_category_background.xml
+++ b/app/src/main/res/drawable/custom_list_category_background.xml
@@ -7,7 +7,7 @@
             <!-- Background -->
             <item>
                 <shape>
-                    <solid android:color="@color/blue_500" />
+                    <solid android:color="@color/green_100" />
                 </shape>
             </item>
         </layer-list>
@@ -17,7 +17,7 @@
             <!-- Background -->
             <item>
                 <shape>
-                    <solid android:color="@color/blue_200" />
+                    <solid android:color="@color/green_50" />
                 </shape>
             </item>
         </layer-list>
