--- a/app/src/main/res/layout/activity_question_result.xml
+++ b/app/src/main/res/layout/activity_question_result.xml
@@ -154,6 +154,7 @@
             android:id="@+id/pie_chart_progress"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:foregroundTint="?attr/textColor"
             android:layout_gravity="center"
             android:textAlignment="center" />
     </LinearLayout>
@@ -163,6 +164,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_home"
+        android:textColor="@color/white"
+        android:drawableEnd="@drawable/ic_home"
+        android:drawableTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
