--- a/app/src/main/res/layout/custom_list_bookmark_question.xml
+++ b/app/src/main/res/layout/custom_list_bookmark_question.xml
@@ -11,10 +11,12 @@
         android:id="@+id/txt_category_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
         android:text="@string/category_title"
         android:textSize="14sp"
         android:layout_marginTop="5dp"
-        android:textColor="?attr/textColor"
+        android:textColor="@color/white"
         android:padding="4dp"
         android:background="@drawable/view_question_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:question_text="@string/title"
-        app:question_code="@string/description"
+        app:question_code="@string/code"
         android:textIsSelectable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         app:answer_text="@string/title"
-        app:answer_code="@string/description"
+        app:answer_code="@string/code"
         android:textIsSelectable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
