--- a/app/src/main/res/layout/view_question.xml
+++ b/app/src/main/res/layout/view_question.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:fontFamily="monospace"
-        android:text="@string/description"
+        android:text="@string/code"
         android:textSize="12sp"
         android:background="@color/blue_700"
         android:layout_marginTop="5dp"
